--- a/index.html
+++ b/index.html
@@ -5,20 +5,359 @@
     <title>First React app</title>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js'></script>
 </head>
 <body>
     <div id='app'></div>
 
     <script>
+        window.API = {
+            fetchFriends() {
+                return new Promise((res, rej) => {
+                    const friends = [
+                        {
+                            name: 'A',
+                            active: true,
+                        },
+                        {
+                            name: 'B',
+                            active: true,
+                        },
+                        {
+                            name: 'C',
+                            active: false,
+                        },
+                    ]
+
+                    setTimeout(() => res(friends), 2000)
+                })
+            },
+
+            fetchPopularRepos(language) {
+                //const encodedURI = encodeURI (`https://api.github.com/search/
+                const encodedURI = encodeURI (`https://api.github.com/search/repositories?q=stars:>3+language:${language}&sort=stars&order=desc&type=Repositories`)
+
+                console.log(encodedURI)
+
+                return fetch(encodedURI)
+                    .then((data) => data.json())
+                    .then((repos) => repos.items)
+                    .catch((error) => {
+                        console.warn(error)
+                        return null
+                    })
+            }
+        }
+    </script>
+
+    <script type='text/babel'>
         const name = 'Emile'
         const handle = '@Emile'
 
-        const nameElement = React.createElement('h1', { id: 'header' }, name)
-        const handleElement = React.createElement('h3', null, handle)
+        class Loading extends React.Component {
+            constructor(props) {
+                super(props)
 
-        const wrapperElement = React.createElement('div', {id: 'container'}, nameElement, handleElement)
+                this.state = {
+                    text: 'Loading'
+                }
+            }
 
-        ReactDOM.render(wrapperElement, document.getElementById('app'))
+            componentDidMount() {
+                const stopper = this.state.text + '...'
+
+                this.interval = window.setInterval(() => {
+                    this.state.text === stopper
+                    ? this.setState ({text: 'Loading'})
+                    : this.setState((currentState) => {
+                        return {
+                            text: currentState.text + '.'
+                        }
+                    }) 
+                }, 300)
+            }
+
+            componentWillUnmount() {
+                window.clearInterval(this.interval)
+            }
+
+            render() {
+                return (<p>{this.state.text}</p>)
+            }
+        }
+
+        function Nav(props) {
+            const languages = ['all', 'javascript', 'java', 'python', 'C++']
+
+            return (
+                <nav>
+                    <ul>
+                        {languages.map((lang) => (
+                            <li key={lang} onClick={() => props.onSelectLanguage(lang) }>
+                                {lang}
+                            </li>
+                        ))}
+                    </ul>
+                </nav>
+            )
+        }
+
+        function RepoGrid(props) {
+            return (
+                <ul style={{display: 'flex', flexWrap: 'wrap'}}>
+                        {props.repos.map(({name, owner, stargazers_count, html_url}) =>(
+                            <li key={name} style={{margin: 30}}>
+                                <ul>
+                                    <li><a href={html_url}>{name}</a></li>
+                                    <li>@{owner.login}</li>
+                                    <li>{stargazers_count}</li>
+                                </ul>
+                            </li>
+                        ))}
+                </ul>
+            )
+        }
+
+        function NameComponent(props) {
+            //return React.createElement('h1', { id: 'header' }, props.name)
+            return <h1>{props.name}</h1>
+        }
+
+        function HandleComponent(props) {
+            //return React.createElement('h3', null, props.handle)
+            return <h3>{props.handle}</h3>
+        }
+
+        function ActiveFriends(props) {
+            return (
+                <div>
+                    <h2>Active Friends</h2>
+                    <ul>
+                        {props.list.map((friend) => (
+                            <li key={friend.name}>
+                                <span>{friend.name}</span>
+                                <button onClick={() => props.onRemoveFriend(friend.name)}>Remove</button>
+                                <button onClick={() => props.onToggleFriend(friend.name)}>Deactivate</button>
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+            )
+        }
+
+        function InactiveFriends(props) {
+            return (
+                <div>
+                    <h2>Inactive Friends</h2>
+                    <ul>
+                        {props.list.map((friend) => (
+                            <li key={friend.name}>
+                                <span>{friend.name}</span>
+                                <button onClick={() => props.onToggleFriend(friend.name)}>Activate</button>
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+            )
+        }
+
+        function FriendsList(props) {
+            return (
+                <ul>
+                    {props.list.map((friend) => (
+                        <li key={friend.name}>
+                            <span>{friend.name}</span>
+                        </li>
+                    ))}
+                </ul>
+            )
+        }
+
+        class App extends React.Component {
+            constructor(props) {
+                super(props)
+                this.state = {
+                    friends: [],
+                    input: '',
+                    loading: true,
+                    repos: [],
+                    activeLanguage: 'all',
+                }
+
+                this.handleRemoveFriend = this.handleRemoveFriend.bind(this)
+                this.updateInput = this.updateInput.bind(this)
+                this.handleAddFriend = this.handleAddFriend.bind(this)
+                this.handleToggleFriend = this.handleToggleFriend.bind(this)
+                this.handleSelectLanguage = this.handleSelectLanguage.bind(this)
+                this.fetchRepos = this.fetchRepos.bind(this)
+
+                console.log('--consutructor--')
+            }
+
+            fetchRepos(lang) {
+                this.setState({
+                    loading: true,
+
+                })
+
+                window.API.fetchPopularRepos(lang)
+                .then((repos) => {
+                    this.setState({
+                        loading: false,
+                        repos,
+                    })
+                })
+            }
+
+            handleSelectLanguage(lang) {
+                this.setState({
+                    activeLanguage: lang,
+                })
+            }
+
+            componentDidMount() {
+                console.log('--componentDidMount--')
+
+                API.fetchFriends()
+                    .then((friends) => {
+                        this.setState({
+                            friends,
+                            loading: false,
+                        })
+                    })
+
+                this.fetchRepos(this.state.activeLanguage)
+            }
+
+            componentDidUpdate(prevProps, prevState) {
+                console.log('--componentDidUpdate--')
+
+                console.log ('previous activeLanguage: ' + prevState.activeLanguage)
+                console.log ('current activeLanguage: ' + this.state.activeLanguage)
+
+                if (prevState.activeLanguage !== this.state.activeLanguage) {
+                    this.fetchRepos(this.state.activeLanguage)
+                }
+            }
+
+            componentWillUnmount() {
+                console.log('--componentWillUnmount--')
+            }
+
+            static getDerivedStateFromProps() {
+                console.log('--getDerivedStateFromProps--')
+                return null
+            }
+
+            updateInput(e) {
+                const value = e.target.value
+                this.setState ((currentState) => ({
+                    input: value
+                }))
+            }
+
+            handleAddFriend() {
+                this.setState((currentState) => {
+                    if (this.state.input.length < 1
+                        || currentState.friends.includes(this.state.input)) return
+                    return  {
+                        friends: currentState.friends.concat([{
+                            name: currentState.input,
+                            active: true,
+                        }]),
+                        input: '',
+                    }
+                })
+            }
+
+            handleRemoveFriend(name) {
+                this.setState((currentState) => {
+                    return  {
+                        friends: currentState.friends.filter((friend) => friend.name !== name)
+                    }
+                })
+            }
+
+            handleToggleFriend(name) {
+                this.setState((currentState) => {
+                    const friend = currentState.friends.find((friend) => friend.name === name)
+
+                    return {
+                        friends: currentState.friends.filter((friend) => friend.name !== name)
+                            .concat([
+                                {
+                                    name: friend.name,
+                                    active: !friend.active,
+                                }
+                            ])
+                    }
+                })
+            }
+
+            render() {
+
+                console.log('--render--')
+
+                return (
+                <div>
+                    <div id='container'>
+                        <input
+                            type='text'
+                            placeholder='new friend'
+                            value={this.state.input}
+                            onChange={this.updateInput}
+                        />
+                        <button onClick={() => this.handleAddFriend()}>Submit</button>
+                        <div>
+                            <button onClick={() => this.setState({friends: []})}>Clear Friends</button>
+                        </div>
+
+                        <ActiveFriends
+                            list={this.state.friends.filter((friend) => friend.active === true)} 
+                            onRemoveFriend={this.handleRemoveFriend}
+                            onToggleFriend={this.handleToggleFriend}
+                        />
+
+                        <InactiveFriends
+                            list={this.state.friends.filter((friend) => friend.active === false)} 
+                            onRemoveFriend={this.handleRemoveFriend}
+                            onToggleFriend={this.handleToggleFriend}
+                        />
+                    </div>
+
+                    <div id='PopularGithub'>
+                        <h1>Popular Github Repositories</h1>
+                        <h2>Active Language: {this.state.activeLanguage}</h2>
+                        <Nav onSelectLanguage={this.handleSelectLanguage} />
+                        {
+                            this.state.loading 
+                            ? <Loading />
+                            : <div>
+                                <RepoGrid repos={this.state.repos} />
+                            </div>
+                        }
+                    </div>
+                </div>
+            )
+            }
+        }
+
+        /*
+        const wrapperElement = React.createElement(
+            'div', 
+            {id: 'container'}, 
+            //React.createElement(NameComponent, { name: 'Emile' }), 
+            NameComponent({name: 'Emile'}),
+            React.createElement(HandleComponent, { handle: '@Emile' }))
+        */
+        
+        //ReactDOM.render(wrapperElement, document.getElementById('app'))
+        ReactDOM.render(
+            <App />,
+            document.getElementById('app')
+        )
+
+
     </script>
 </body>
 </html>
